# academic_care2025

./: README.md  materi
basic/: basic_class  basic_class.cpp  basic_enum  basic_enum.cpp  basic_pointer  basic_pointer.cpp  basic_serial  basic_serial.cpp  basic_static  basic_static.cpp  basic_struct  basic_struct.cpp  basic_template  basic_template.cpp  basic_vector.cpp  enum  highoop  highoop.cpp
orimidterm/: main.cpp  meson.build  user.h
risal_acc_midtermsim/: README.md  main.cpp  meson.build  user.h
